# rye-tutorial

./: .gitignore  pyproject.toml
