[project]
name = "rye-tutorial"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "m.kumeta", email = "kumeta1202@gmail.com" }
]
dependencies = ["fastapi~=0.95.2", "uvicorn~=0.22.0"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
[tool.hatch.metadata]
allow-direct-references = true
